# sportanalyst

./: .env.example  .gitignore  AI Agent Coding Guide.md  Building A Sports Prediction System.md  Implementation Plan.md  PROGRESS.md  PROMPTS.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest_latest.txt  start_ingestion.ps1  start_model_serving.ps1  test_cache_resilience.py  test_res.txt  train_model.py
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
alembic/: env.py  models.py
alembic/versions/: 001_initial.py  002_add_halftime_scores.py
configs/: leagues.yaml
frontend/: .eslintrc.json  .gitignore  README.md  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/matches/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/components/: BiometricGauge.tsx  DataSourceBadge.tsx  LineMovementChart.tsx  PredictionCard.tsx  SHAPWaterfall.tsx  SentimentBadge.tsx
frontend/src/components/__tests__/: BiometricGauge.test.tsx  PredictionCard.test.tsx  SHAPWaterfall.test.tsx  SentimentBadge.test.tsx
frontend/src/types/: index.ts
infra/grafana/dashboards/: api-dashboard.json  model-dashboard.json
infra/k8s/base/: configmap.yml  namespace.yml
infra/k8s/services/api-gateway/: configmap.yml  deployment.yml  hpa.yml  service.yml
infra/k8s/services/biometric-service/: deployment.yml  hpa.yml  service.yml
infra/k8s/services/feature-engine/: deployment.yml  hpa.yml  service.yml
infra/k8s/services/ingestion/: deployment.yml  hpa.yml
infra/monitoring/: alerts.yml
libs/: pyproject.toml
libs/sports_common/: __init__.py  config.py  constants.py  db.py  kafka_client.py  league_config.py  logging.py  metrics.py  security.py
libs/sports_common/schemas/: __init__.py  biometrics.py  events.py  features.py  odds.py  predictions.py  sentiment.py
libs/sports_common/utils/: __init__.py  data_guard.py  math.py  time.py
libs/tests/: __init__.py  test_data_guard.py  test_league_config.py  test_math.py  test_time.py
models/: predictor.joblib  predictor_metadata.json
scripts/: auto_retrain.py  backfill_features.py  backtest.py  benchmark_classical_vs_deep.py  chaos_test.py  diagnose_live_data.py  e2e_test.py  load_test.py  seed_db.py  test_hardening_acceptance.py
services/biometric_service/: Dockerfile  pyproject.toml
services/biometric_service/src/: __init__.py  acwr.py  injury_risk.py  main.py  publisher.py  wellness.py
services/biometric_service/tests/: conftest.py  test_acwr.py  test_injury_risk.py
services/feature_engine/: Dockerfile
services/feature_engine/configs/: features.yaml
services/feature_engine/src/: biometric.py  main.py  market.py  sentiment.py  store.py  temporal.py
services/feature_engine/tests/: conftest.py  test_data_leakage.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/: health.py  main.py
services/ingestion/src/adapters/: __init__.py  api_sports.py  base_adapter.py  catapult.py  football_data_org.py  odds_providers.py  sportsdataio.py  thesportsdb.py  whoop.py
services/ingestion/src/ingestion_service/: ingesting_processor.py  league_processor.py
services/ingestion/src/validators/: event_validator.py
services/model_serving/: Dockerfile  pyproject.toml
services/model_serving/src/: betting.py  cache.py  calibrator.py  explainer.py  main.py  predictor.py
services/model_serving/tests/: conftest.py  test_api.py  test_betting_calibrator.py  test_predictor_model_loading.py
services/model_training/: Dockerfile
services/model_training/configs/: injury_risk.yaml  xgboost.yaml
services/model_training/src/: data_loader.py  evaluator.py  injury_risk_data_loader.py  registry.py  train.py  train_injury_risk.py
services/model_training/tests/: test_data_loader.py
services/nlp_service/: Dockerfile
services/nlp_service/src/: classifier.py  event_detector.py  main.py  preprocessing.py  publisher.py
services/nlp_service/tests/: __init__.py  conftest.py  test_integration.py
services/reporting_service/: Dockerfile  pyproject.toml
services/reporting_service/src/: main.py  pdf_exporter.py  report_builder.py
services/reporting_service/src/templates/: match_report.html
tests/: test_dynamic_scaling.py
(+24 files in other folders)
